Add mypy configuration and fix all warnings

--- a/mkosi.conf
+++ b/mkosi.conf
@@ -23,8 +23,10 @@ Packages=
 
 BuildPackages=
  python3-build
+ python3-mypy
  python3-pytest
  python3-setuptools-scm
+ python3-typeshed
 
 WithDocs=no
 CleanPackageMetadata=yes
