Switch to asyncio

--- a/mkosi.conf
+++ b/mkosi.conf
@@ -25,6 +25,7 @@ BuildPackages=
  python3-build
  python3-mypy
  python3-pytest
+ python3-pytest-asyncio
  python3-setuptools-scm
  python3-typeshed
 
