Change thresholds to take both percentage and absolute values

--- a/nest-octopus.conf.example
+++ b/nest-octopus.conf.example
@@ -19,9 +19,9 @@ low_price_temp = 20.0
 average_price_temp = 17.0
 
 # Price classification thresholds (optional)
-# low_price_threshold: multiplier for determining LOW prices (default: 0.75)
+# low_price_threshold: multiplier for determining LOW prices (default: 75%)
 #   LOW prices are below min(daily_avg, weekly_avg) * low_price_threshold
-# high_price_threshold: multiplier for determining HIGH prices (default: 1.33)
+# high_price_threshold: multiplier for determining HIGH prices (default: 133%)
 #   HIGH prices are above max(daily_avg, weekly_avg) * high_price_threshold
-# low_price_threshold = 0.75
-# high_price_threshold = 1.33
+# low_price_threshold = 75%
+# high_price_threshold = 133%
