Add OnFailure= service that calls curl on configured URL for remote notification of service failure

--- a/mkosi.extra/usr/lib/systemd/system/nest-octopus.service
+++ b/mkosi.extra/usr/lib/systemd/system/nest-octopus.service
@@ -2,6 +2,7 @@
 Description=Nest Octopus Heating Optimizer Service
 After=network-online.target
 Wants=network-online.target
+OnFailure=nest-octopus-fail.service
 
 [Service]
 Type=notify-reload
